      deb http://unknown-miror\ndeb-src http://known-mirror 
      entries are used (#221730)
  * UpdateManager/Common/utils.py:
    - fix inhibit path (LP: #140754), thanks to 
      Andreas Dalsgaard
  * DistUpgrade/DistUpgradeViewText.py:
    - use sensible-pager first and fallback to "more" if
      that is not available (thanks to Mithrandir)

 --

update-manager (1:0.90.0) intrepid; urgency=low

  * merged branches:
    - ~alefteris/update-manager/alefteris (thanks!)
  * UpdateManager/Core/DistUpgradeFetcherCore.py:
    - do not crash if the tarfile can not be read (LP: #203504)
  * fix a bunch of spelling mistakes (LP: #213040), thanks
    to Peter Cordes
  * AutoUpgradeTester/automatic-upgrade-testing:
    - add "--additional-pkgs" argument that can be used to install
      the given packages (seperated with ",") into the VM before 
      the upgrade is performed
  * DistUpgrade/DistUpgradeConfigParser.py:
    - write error to log in getListFromFile() if file is not
      found
  * DistUpgrade/DistUpgradeCache.py:
    - fix plural form text (LP: #226695)
  * update-manager-core.install, update-manager.install:
    - move the DistUpgrade part into update-manager-core
  * DistUpgrade/DistUpgradeController.py, update-manager, dist-upgrade.py:
    - move partialUpgrade() functionality into the controller and
      expose it with --partial in dist-upgrade.py
  * DistUpgrade/DistUpgrade.cfg:
    - prepare for hardy->intrepid upgrades
  
 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 06 May 2008 10:02:16 +0200

update-manager (1:0.87.27) hardy-proposed; urgency=low

  * DistUpgrade/DistUpgradeCache.py:
    - fix bug in withNetwork value propergation (LP: #227197)
  * po/ko.po:
    - fix translation for y/n prompt so that korean users
      can actually continue (LP: #223419)

 --

update-manager (1:0.87.26) hardy-proposed; urgency=low

  * DistUpgrade/DistUpgradeController.py:
    - run in server mode on a server CD (LP: #222895)