@@ -12,6 +12,9 @@ update-manager (1:0.90.1) intrepid; urgency=low
   * DistUpgrade/DistUpgradeViewText.py:
     - use sensible-pager first and fallback to "more" if
       that is not available (thanks to Mithrandir)
+  * DistUpgradeView{Gtk,KDE,Text}.py:
+    - only overwrite the DEBIAN_FRONTEND if it is not set
+      already (thanks to Guy Sheffer)
 
  --
 
